@@ -49,6 +49,10 @@ settings = {
     'scripts_url': '/js/static',
     'liveblog_backend_url': 'http://localhost:6552/liveblog/backend',
     'liveblog_status_url': 'http://localhost:6552/liveblog/status',
+    # XXX I'd rather put None here and change the settings for a specific test,
+    # but then I'd need to re-create an Application since assets_max_age
+    # is only evaluated once during configuration.
+    'assets_max_age': '1',
     'caching_time_content': '5',
     'caching_time_article': '10',
     'caching_time_centerpage': '20',
