@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - MAINT: Make host for image urls configurable
 
+- MAINT: Set cache max age for assets
+
 
 2.1 (2015-09-14)
 ----------------
